--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	 
 </head>
 <body>
-	<a href="login.php">login</a>
-	<a href="reg.php">reg</a>
+	<a href="kb.php">匿名用户</a>
+	<a href="reg.php">成为注册用户</a>
 	</body>
 	</html>
